consegui fazer o passport funcionar adequadamente!

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,7 +23,7 @@ html(lang="pt-BR")
 								ul.menu-conta
 									li Ol&aacute;, #{name}!
 									li
-										a(href='#') Minha conta
+										a(href='/minhaconta') Minha conta
 									li
 										a(href='#') Ajuda
 									li
@@ -39,6 +39,8 @@ html(lang="pt-BR")
 					.row
 						.col-md-4
 							ul
+								li
+									a(href='/') HOME
 								li
 									a(href='#') Apple
 								li
