--- a/views/minha-conta.pug
+++ b/views/minha-conta.pug
@@ -8,8 +8,10 @@ block content
         li
             strong E-mail: #{user.email}
         li
-            strong Admin: #{user.isAdmin}
+            strong Administrador: #{user.isAdmin}
         li
-            strong Hashed password: #{user.senha}
+            strong Senha encriptada: #{user.senha}
         li
-            strong Last update: #{user.updatedAt}
+            strong Último login: #{user.ultimo_login}
+        li
+            strong Última modificação: #{user.updatedAt}
