Adição de modelos, painel de controle, aperfeiçoamentos diversos

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,9 @@ body {
 *, *::before, *::after {
   box-sizing: border-box; }
 
+.disabled:hover {
+  cursor: not-allowed; }
+
 .wrapper {
   min-height: 100%;
   position: relative; }
