--- a/views/index.pug
+++ b/views/index.pug
@@ -3,20 +3,95 @@ extends layout
 block content
   .container
       .row.products
-        .col-md.product
-        .col-md.product
-        .col-md.product
-        .col-md.product
-        .col-md.product
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
       .row.products
-        .col-md.product
-        .col-md.product
-        .col-md.product
-        .col-md.product
-        .col-md.product
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
       .row.products
-        .col-md.product
-        .col-md.product
-        .col-md.product
-        .col-md.product
-        .col-md.product
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
+        .col-md.product.card
+          img(src="/images/produtos/xiaomi/xiaomi-mi-8-lite.jpg" class="card-img-top" alt="...")
+          .card-body
+            h5.card-title Product Name
+            p.card-text Some description of the product
+            a(href="#" class="btn btn-success btn-block") Adicionar
