--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,9 @@ html(lang="pt-BR")
 		title Loja
 	body
 		.wrapper#root
+			if alert
+				.alert
+					span.text-success #{alert}
 			.header
 				.container
 					.row
