--- a/views/painel.pug
+++ b/views/painel.pug
@@ -1,18 +1,105 @@
 extends layout
 
 block content
-    .container
-        .row
-            div(class="col-4")
-                div(class="list-group" id="list-tab" role="tablist")
-                    a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home") Home
-                    a(class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile") Profile
-                    a(class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages") Messages
-                    a(class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings") Settings
-            
-            div(class="col-8")
-                div(class="tab-content" id="nav-tabContent")
-                    div(class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list") ...
-                    div(class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list") ...
-                    div(class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list") ...
-                    div(class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list") ...
+	.container
+		.row
+			div(class="col-4 menu-painel")
+				div(class="list-group" id="list-tab" role="tablist")
+					a(class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home") Home
+					a(class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile") Adicionar Produto
+					a(class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages") Adicionar Fabricante
+					a(class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings") Gerenciar Permissões
+			
+			div(class="col-8")
+				div(class="tab-content" id="nav-tabContent")
+					div(class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list")
+						h3 Perfil de administrador:
+						ul.list-group
+							li.list-group-item Nome de usuário: #{user.usuario} 
+								a(href="#") Editar
+							li.list-group-item E-mail: #{user.email} 
+								a(href="#") Editar
+							li.list-group-item Administrador: 
+								if user.isAdmin
+									span.text-success #{user.isAdmin}
+								else
+									span.text-danger #{user.isAdmin} 
+								a(href="#")  Editar
+					div(class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list")
+							h3 Adicionar Produto:
+							hr
+							form(action="/painel-de-controle" method="post")
+								.errors-product
+									if errors
+										h4 Por favor, corrija os seguintes erros:
+										ul(class="list-group")
+											each error in errors
+												li(class="list-group-item list-group-item-danger")= error.msg
+									ul(v-if="errors.length > 0" class="list-group")
+										li(class="list-group-item list-group-item-danger" v-for="error in errors") {{error.message}}
+
+								.form-group
+									label(for="name") Nome do produto
+									input(class="form-control" name="name" id="name" type="text" minlength="2" maxlength="55" autocomplete="off" placeholder="Ex.: Samsung Galaxy S10" required)
+								
+								.form-group
+									label(for="manufacturerId") Fabricante
+									select(class="custom-select" name="manufacturerId" id="manufacturerId" required)
+										option(value="") Nenhum fabricante selecionado
+										if manufacturersList
+											each manufacturer in manufacturersList
+												option(value=manufacturer.id)= manufacturer.name
+								.form-group
+									label(for="image") Caminho da Imagem
+									input(class="form-control-file" name="image_path" id="image" type="file" required)
+									small(class="form-text text-muted") Atenção: Escolha o caminho onde a imagem já está salva em definitivo. Você deve mover a imagem ao caminho antes.
+								.form-group
+									label(for="price") Preço em Reais
+									.input-group.mb-2
+										.input-group-prepend
+											.input-group-text R$
+										input(class="form-control" name="price" id="price" type="number" step="0.01" placeholder="Ex.: 39,90" required)
+									small(class="form-text text-muted") Preço unitário em Reais (R$)
+								.form-group
+									label(for="os") Sistema Operacional
+									input(class="form-control" name="os" id="os" type="text" minlength="2" maxlength="55" placeholder="Ex.: Android 10" required)
+								.form-group
+									label(for="color") Cor
+									input(class="form-control" name="color" id="color" type="text" minlength="2" maxlength="55" placeholder="Ex.: Preto" required)
+								.form-group
+									label(for="displaySize") Tamanho da Tela
+									input(class="form-control" name="displaySize" id="displaySize" type="text" minlength="2" maxlength="55" placeholder="Ex.: 6.1\"" required)
+								.form-group
+									label(for="cpu") Processador
+									input(class="form-control" name="cpu" id="cpu" type="text" minlength="2" maxlength="55" placeholder="Ex.: 8 core 2.2 GHZ" required)
+								.form-group
+									label(for="ram") Memória RAM
+									input(class="form-control" name="ram" id="ram" type="text" minlength="2" maxlength="55" placeholder="Ex.: 8 GB" required)
+								hr
+								.form-group
+									input(type="submit" class="btn btn-primary btn-block" value="Salvar produto")
+					
+					
+					div(class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list")
+							h3 Adicionar Fabricante:
+							hr
+							form(action="/painel-de-controle" method="post")
+								.errors-product
+									if errors
+										h4 Por favor, corrija os seguintes erros:
+										ul(class="list-group")
+											each error in errors
+												li(class="list-group-item list-group-item-danger")= error.msg
+									ul(v-if="errors.length > 0" class="list-group")
+										li(class="list-group-item list-group-item-danger" v-for="error in errors") {{error.message}}
+
+								.form-group
+									label(for="name") Nome do Fabricante
+									input(class="form-control" name="name" id="name" type="text" minlength="2" maxlength="20" autocomplete="off" placeholder="Ex.: Samsung" required)
+								
+								hr
+								.form-group
+									input(type="submit" class="btn btn-primary btn-block" value="Salvar fabricante")
+
+
+					div(class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list") ...
