Adicionei página de detalhe do produto e informações adicionais da conta de usuário

--- a/views/cadastro.pug
+++ b/views/cadastro.pug
@@ -11,6 +11,7 @@ block content
                     a(href="/autenticacao/login") aqui.
                 hr
                 form(action="/autenticacao/cadastrar" class="register-form" method="post" @submit.prevent="handleSubmitRegister")
+                    input(type="hidden" name="_csrf" value=csrfToken)
                     .errors-register
                         if errors
                             h4 Por favor, corrija os seguintes erros:
