--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,9 +78,33 @@ body {
     background-color: #ecf0f1; }
     .content .products .product {
       background-color: white;
-      min-height: 300px;
       max-width: 300px;
-      margin: 0px 10px 0px 10px; }
+      min-width: 180px;
+      margin: 10px; }
+      .content .products .product .percentage-off {
+        width: fit-content;
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        padding: 5px;
+        background-color: red;
+        color: white; }
+      .content .products .product .card-body {
+        position: relative; }
+        .content .products .product .card-body .price-tag {
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          padding-bottom: 5px; }
+  .content .product-details {
+    background-color: white;
+    border-radius: 5px;
+    padding: 20px; }
+    .content .product-details .description {
+      padding: 5px;
+      margin-left: 15px;
+      color: white;
+      background-color: #2c3e50; }
 
 footer {
   position: absolute;
