--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -103,9 +103,39 @@ body {
         background-color: #ecf0f1;
         .product {
             background-color: white;
-            min-height: 300px;
             max-width: 300px;
-            margin: 0px 10px 0px 10px;
+            min-width: 180px;
+            margin: 10px;
+            .percentage-off {
+                width: fit-content;
+                position: absolute;
+                top:-5px;
+                right:-5px;
+                padding: 5px;
+                background-color: red;
+                color: white;
+            }
+            .card-body {
+                position: relative;
+                .price-tag {
+                    position: absolute;
+                    bottom: 0;
+                    right:0;
+                    padding-bottom: 5px;
+                }
+            }
+        }
+    }
+    .product-details {
+        background-color: white;
+        border-radius: 5px;
+        padding: 20px;
+
+        .description {
+            padding: 5px;
+            margin-left: 15px;
+            color: white;
+            background-color: #2c3e50;
         }
     }
 }
