adicionei express-session-sequelize para sessões salvas no db e adicionei botão de favoritos

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,6 +69,12 @@ body {
     transition: 200ms; }
     .navegacao .container .carrinho img:hover {
       background-color: #c0392b; }
+  .navegacao .container .favorito img {
+    padding: 5px;
+    border-radius: 5px;
+    transition: 200ms; }
+    .navegacao .container .favorito img:hover {
+      background-color: #c0392b; }
 
 .content {
   padding-top: 50px;
