--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
 						.card-body
 							h5.card-title= product.name
 							p.card-text Por Apenas 
-								strike.text-muted R$ #{(Math.round((product.price / 0.8) * 100) / 100).toFixed(2)}
-							h3(class="text-success text-center price-tag") R$ #{product.price}
+								strike.text-muted R$ #{(Math.round((product.price / 0.8) * 100) / 100).toFixed(2).replace('.',',')}
+							h3(class="text-success text-center price-tag") R$ #{(Math.round(product.price * 100) / 100).toFixed(2).toString().replace('.',',')}
 							
 	
