--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,7 @@ html(lang="pt-BR")
 			if alert
 				.alert
 					span.text-success #{alert}
-			.header
+			.header.d-none.d-sm-block
 				.container
 					.row
 						.col-md-6.loja-title
@@ -40,7 +40,7 @@ html(lang="pt-BR")
 										a(href='/autenticacao/login') Entrar
 									li
 										a(href='/autenticacao/cadastrar') Cadastrar
-			.navegacao
+			.navegacao.d-none.d-sm-block
 				.container
 					.row
 						.col-md-4
@@ -62,15 +62,20 @@ html(lang="pt-BR")
 								.input-group
 									input.form-control(type='text' placeholder='Procurar produto')
 									.input-group-append
-										input.btn.btn-light(type='button' value='Pesquisar')
+										button.btn.btn-light(type='submit')
+											img(src="/images/svg/search.svg", alt="Procurar" width="20")
 						.col-md-4
 							.col-md-6
 							.col-md-3.favorito
 								a(href="#" title="Meus favoritos")
 									img(src="/images/svg/heart.svg", alt="Meus favoritos" width=40)
 							.col-md-3.carrinho
-								a(href="#" title="Meu carrinho de compras")
+								a(href="/carrinho" title="Meu carrinho de compras")
 									img(src="/images/svg/cart.svg", alt="Carrinho de compras" width=40)
+									if cart
+										span.badge.badge-light= cart.totalQty
+									else
+										span.badge.badge-light 0
 			.content#content
 				block content
 			footer
