--- a/views/painel.pug
+++ b/views/painel.pug
@@ -29,6 +29,7 @@ block content
 							h3 Adicionar Produto:
 							hr
 							form(action="/painel-de-controle" method="post")
+								input(type="hidden" name="_csrf" value=csrfToken)
 								.errors-product
 									if errors
 										h4 Por favor, corrija os seguintes erros:
@@ -84,6 +85,7 @@ block content
 							h3 Adicionar Fabricante:
 							hr
 							form(action="/painel-de-controle" method="post")
+								input(type="hidden" name="_csrf" value=csrfToken)
 								.errors-product
 									if errors
 										h4 Por favor, corrija os seguintes erros:
